test_programs/compile_failure/noirc_frontend_tests_enums_error_with_duplicate_enum_variant/src/main.nr

    pub enum Foo {
        Bar(i32),
        Bar(u8),
    }

    fn main() {}
    